--- a/test.html
+++ b/test.html
@@ -1,5 +1,17 @@
 <html>
+
+<head>
+    <link rel="stylesheet" href="style.css" type="text/css">
+</head>
+
 <body>
-<p>Some trial text</p>
+    <div id="bounds">
+        <div id="completed-bar">
+            <svg id="cb" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+            
+            </svg>
+        </div>
+    </div>
 </body>
+<script src="script.js" type="text/javascript"></script>
 </html>
