--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
@@ -8,10 +10,18 @@
     <div id="bounds">
         <div id="completed-bar">
             <svg id="cb" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
-            
             </svg>
+        </div>
+        <div id="grade-bar">
+            <svg id="gb" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+            </svg>
+        </div>
+        <div id="percentage-marks">
+                <svg id="pm" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+                    
         </div>
     </div>
 </body>
 <script src="script.js" type="text/javascript"></script>
+
 </html>
