--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+    <h1>Courses</h1>
+    <h2>COMPX 532</h2>
     <div id="bounds">
         <div id="completed-bar">
             <svg id="cb" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
@@ -17,10 +19,38 @@
             </svg>
         </div>
         <div id="percentage-marks">
-                <svg id="pm" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
-                    
+            <!-- <svg id="pm" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"> -->
+            <div id="F"></div>
+            <div id="Cm">C-</div>
+            <div id="C">C</div>
+            <div id="Cp">C+</div>
+            <div id="Bm">B-</div>
+            <div id="B">B</div>
+            <div id="Bp">B+</div>
+            <div id="Am">A-</div>
+            <div id="A">A</div>
+            <div id="Ap">A+</div>
         </div>
     </div>
+    <br /><br />
+
+    <button id="add-grade">Add assessments or grades</button>
+
+
+<button id="add-course">Add a new course</button>
+<div id="new-course-form">
+    <label for="code">Course code: </label>
+        <input type="text" id="code">
+        <label for="name">Course name: </label>
+        <input type="text" id="name">
+        <button id="btn">Submit</button>
+</div>
+
+
+    
+
+
+    <div id="tooltip"></div>
 </body>
 <script src="script.js" type="text/javascript"></script>
 
