Added table for editing assessment results
:wq
:wq

:wq
:WQ
help
i can't escapee

--- a/test.html
+++ b/test.html
@@ -40,6 +40,7 @@
 <button id="add-course">Add a new course</button>
 <div id="new-course-form">
     <label for="code">Course code: </label>
+    <!-- todo: make th name and code ecompulsory, and then add non-compusory assgn -->
         <input type="text" id="code">
         <label for="name">Course name: </label>
         <input type="text" id="name">
